--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -68,7 +68,9 @@
   <script>
     Polymer({
       is: 'oj-app',
-      properties: { onRoute: { observer: 'onRouteChanged' } },
+      properties: {
+        onRoute: { observer: 'onRouteChanged' }
+      },
       onNotification: function (event, text) {
         this.showNotification(text);
       },
