--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -4,6 +4,7 @@
 
  *= require polymer/polymer
 
+ *= require iron-icons/iron-icons
  *= require iron-a11y-keys/iron-a11y-keys
  *= require iron-menu-behavior/iron-menu-behavior
  *= require iron-menu-behavior/iron-menubar-behavior
